<resources>
    <string name="app_name">Skycoin</string>
    <string name="login">Login</string>
    <string name="pin_title">Set a PIN#</string>
    <string name="pin_verify_title">Confirm PIN#</string>
    <string name="pin_Input_title">Verify PIN security code</string>
    <string name="pin_tips">
        It’s your first time using our mobile wallet, \n so you’ll need to either create a new wallet \n or load an existing one from a seed.
    </string>
    <string name="pin_create_wallet_name">Name your wallet</string>
    <string name="choose_coin_type">Chose coin type</string>
    <string name="pin_create_wallet_seed">Seed</string>
    <string name="pin_create_wallet_seed_verify">Confrim seed</string>
    <string name="pin_create_wallet_generate_seed">generate seed</string>
    <string name="pin_explain">This PIN # will used to open the wallet. \n Don’t forget your pin. If you do, you may \n lose access to your mobile wallet.</string>
    <string name="pin_verify_explain">Enter your PIN once more to continue</string>
    <string name="pin_input_explain">Please enter your PIN code</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="continues">Continue</string>
    <string name="reset_pin">reset</string>

    <string name="common_next">next</string>
    <string name="start_import_wallet">Import</string>
    <string name="toast_pin_error">The PIN security code of the two inputs is inconsistent.</string>
    <string name="input_pin_error">PIN entered incorrectly, please try again</string>
    <string name="input_pinnum_error">Please try again after 5 minutes.</string>
    <string name="input_pinnum_one">PIN input error, there is only one chance left.</string>
    <string name="input_pinnum_two">PIN input error, there are 2 chances left.</string>
    <string name="input_pintime">Please try again in </string>
    <string name="input_pinminut"> minutes.</string>
    <string name="creates">Create</string>
    <string name="imports">Import</string>
    <string name="input_id">Please enter your wallet ID</string>
    <string name="input_amount">Please enter the transaction amount.</string>
    <string name="input_address">Please enter your wallet address</string>
    <string name="insufficient_balance">Insufficient wallet balance</string>
    <string name="me">me</string>

    <string name="wallet_creat_title">Create a wallet</string>
    <string name="generate_seed">generate_seed</string>
    <string name="wallet_create_tips">
        If you don\'t yet have a wallet, generate a seed and we\'ll create one for you. If you already have a wallet, enter the seed below and load it.</string>
    <string name="disclaimer_info">
        By continuing, you understand the risks related to the use of cryptographic tokens and blockchain-based software, the skycoin mobile wallet, and the Skyconin cryptocrrenc. You understand this product is provided as-is, and agree to the Terms and Conditions governing the usage of this product
    </string>
    <string name="error_agreement">Saftguard your seed!</string>
    <string name="hint_agree"> Yeah, I understand</string>
    <string name="wallets">Wallets</string>
    <string name="wallet">Wallet</string>
    <string name="sky_hours">SKY Hours</string>
    <string name="balance">Balance</string>
    <string name="new_wallet">New Wallet</string>
    <string name="load_wallet">Load Wallet</string>
    <string name="Address">Address</string>
    <string name="new_address">New Address</string>
    <string name="transaction">Transaction</string>
    <string name="pls_input_wallet_name">Please input a wallet name.</string>
    <string name="pls_generate_seed">Please generate a seed.</string>
    <string name="pls_confirm_seed">Please confirm your seed.</string>
    <string name="pls_input_seed">Please input seed.</string>
    <string name="wallet_name_existed">Wallet name has used, please input another one.</string>
    <string name="wallet_is_existed">Wallet has created.</string>
    <string name="str_copy_success">copy success</string>
    <string name="send_sky">Send SKY</string>
    <string name="send_from">Send from</string>
    <string name="send_to">Send to</string>
    <string name="amount">Amount</string>
    <string name="nodes">Nodes</string>
    <string name="notes">Notes</string>
    <string name="cancle">Cancle</string>
    <string name="set_network">go to system setting</string>
    <string name="network_unavailable_hint">Network unavailable，please check your network setting</string>
    <string name="pin_error">Please enter again PIN</string>
    <string name="backup_wallet">Backup Wallet</string>
    <string name="backup_wallet_tips">Long press copy, please keep in mind the following, missing it means losing your wallet.</string>
    <string name="str_send_success">Send Success</string>
    <string name="str_send_error">Send failed</string>
    <string name="send">Send</string>
    <string name="str_create_address_failed">Create Address Failed</string>
    <string name="menu_refresh_wallet">Refresh Wallet</string>
    <string name="menu_create_address">Create Address</string>
    <string name="menu_transaction_info">Transaction Info</string>
    <string name="menu_backup_wallet">Backup Wallet</string>
    <string name="menu_send_coin">Send Coin</string>
    <string name="menu_version_up">Version update</string>
    <string name="loading_str">\nHard loading...\n</string>
    <string name="str_show_qrcode">QR code</string>
    <string name="delete_wallet">Delete Wallet</string>
    <string name="delete_wallet_tips">Please remember to transfer your digital assets before deleting your wallet, otherwise you will not be able to recover your loss.</string>
    <string name="delete_confirm">Confirm Delete</string>
    <string name="delete_wallet_error_msg">Delete Wallet Error!</string>
    <string name="manager_wallet">Manage wallet</string>
    <string name="transrecord">Transaction Record</string>
    <string name="alart">notification</string>
    <string name="system_settings">notification</string>
    <string name="help_center">Help center</string>
    <string name="about_us">about us</string>
</resources>
