<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pin_create_wallet_name"
        android:textColor="@android:color/white"
        android:textSize="15sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/common_edit_radio_bg"
        android:textColor="@android:color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/pin_create_wallet_seed"
        android:textColor="@android:color/white"
        android:textSize="15sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/common_edit_radio_bg"
        android:enabled="false" />


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/next"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@drawable/common_next_bg"
            android:layout_width="150dp"
            android:text="@string/start_import_wallet"
            android:layout_height="50dp" />
    </FrameLayout>

</LinearLayout>