<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/navigation"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <TextView
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:text="@string/wallet"
            android:textColor="#909294"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:text="@string/sky_hours"
            android:textColor="#909294"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:text="@string/balance"
            android:textColor="#909294"
            android:layout_height="wrap_content" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/content"
        android:background="@android:color/white"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <TextView
            android:id="@+id/tv_wallet_name"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:text="name"
            android:textStyle="bold"
            android:textColor="#0075FF"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tv_sky_hours"
            android:layout_centerInParent="true"
            android:text="hours"
            android:layout_width="wrap_content"
            android:textColor="@android:color/black"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tv_balance"
            android:text="123"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:textColor="@android:color/black"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#F0F0F0"></View>
</LinearLayout>